--- a/Dockerfile.tools
+++ b/Dockerfile.tools
@@ -1,4 +1,4 @@
-FROM registry.access.redhat.com/ubi8/ubi:8.1
+FROM registry.access.redhat.com/ubi8/ubi:8.1 as tools
 
 WORKDIR /
 
@@ -18,7 +18,7 @@ COPY hack/make/dependencies.make hack/make/dependencies.make
 COPY Makefile Makefile
 
 # run make
-RUN make kustomize operator-sdk kind helm yq istioctl clusteradm LOCALBIN=/usr/local/bin
+RUN make kustomize operator-sdk kind helm yq clusteradm LOCALBIN=/usr/local/bin
 
 ENV HOME /home
 
