Fixed metrics service

--- a/config/prometheus/monitor.yaml
+++ b/config/prometheus/monitor.yaml
@@ -16,7 +16,7 @@ spec:
   endpoints:
     - path: /metrics
       port: metrics
-      scheme: https
+      scheme: http
       bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
       tlsConfig:
         insecureSkipVerify: true
