--- a/config/prometheus/service.yaml
+++ b/config/prometheus/service.yaml
@@ -1,6 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
+  labels:
+    control-plane: controller-manager
   name: metrics
   namespace: system
 spec:
