--- a/config/quick-start/control-cluster/kustomization.yaml
+++ b/config/quick-start/control-cluster/kustomization.yaml
@@ -1,8 +1,9 @@
 resources:
+  - controller
   - ../../istio
   - ../../metallb
   - ../../cert-manager
-  - controller
+  - cluster-config
 
 patchesStrategicMerge:
   - |-
