--- a/config/add-on-manager/kustomization.yaml
+++ b/config/add-on-manager/kustomization.yaml
@@ -1,9 +1,9 @@
 resources:
-- namespace.yaml
 - manager.yaml
+- cluster-management-addon.yaml
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
-- name: controller
-  newName: quay.io/kuadrant/multicluster-gateway-controller
+- name: addon-manager
+  newName: quay.io/kuadrant/addon-manager
   newTag: main
