--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -1,16 +1,3 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  labels:
-    control-plane: controller-manager
-    app.kubernetes.io/name: namespace
-    app.kubernetes.io/instance: system
-    app.kubernetes.io/component: manager
-    app.kubernetes.io/created-by: multicluster-gateway-controller
-    app.kubernetes.io/part-of: multicluster-gateway-controller
-    app.kubernetes.io/managed-by: kustomize
-  name: system
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -22,7 +9,7 @@ metadata:
     app.kubernetes.io/instance: controller-manager
     app.kubernetes.io/component: manager
     app.kubernetes.io/created-by: multicluster-gateway-controller
-    app.kubernetes.io/part-of: multicluster-gateway-controller
+    app.kubernetes.io/part-of: kuadrant
     app.kubernetes.io/managed-by: kustomize
 spec:
   selector:
