--- a/config/rbac/add-on-clusterrole-binding.yaml
+++ b/config/rbac/add-on-clusterrole-binding.yaml
@@ -1,12 +1,12 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: agent-rolebinding
+  name: kuadrant-addon
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: agent-role
+  name: kuadrant-addon
 subjects:
 - kind: ServiceAccount
-  name: sync-agent
-  namespace: mgc-system
+  name: add-on-manager
+  namespace: system
