--- a/.github/workflows/ci-e2e.yaml
+++ b/.github/workflows/ci-e2e.yaml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - GH-258-GCP
     paths-ignore:
       - '**.adoc'
       - '**.md'
@@ -58,22 +59,26 @@ jobs:
       - name: Setup environment
         run: |
           export OCM_SINGLE=1
-          export DNS=MUTLI
           make local-setup
       - name: Deploy MGC
         run: |
           make kind-load-controller deploy-controller
           kubectl --context kind-mgc-control-plane -n multicluster-gateway-controller-system wait --timeout=300s --for=condition=Available deployment/mgc-controller-manager
           kubectl --context kind-mgc-control-plane logs --all-containers --ignore-errors deployment/mgc-controller-manager -n multicluster-gateway-controller-system
-      - name: Run suite
+      - name: Run suite AWS
         run: |
           export OCM_SINGLE=1
           export TEST_HUB_NAMESPACE=multi-cluster-gateways
           export TEST_HUB_KUBE_CONTEXT=kind-mgc-control-plane
           export TEST_MANAGED_ZONE=${{ secrets.E2E_AWS_DNS_PUBLIC_ZONE_NAME }}
-          export TEST_MANAGED_ZONE_GCP=${{ secrets.E2E_GCP_DNS_PUBLIC_ZONE_NAME }}
-
           make test-e2e
+      - name: Run suite GCP
+        run: |
+          export OCM_SINGLE=1
+          export TEST_HUB_NAMESPACE=multi-cluster-gateways
+          export TEST_HUB_KUBE_CONTEXT=kind-mgc-control-plane
+          export TEST_MANAGED_ZONE=${{ secrets.E2E_GCP_DNS_PUBLIC_ZONE_NAME }}
+          make test-e2e    
       - name: Dump MGC logs
         if: ${{ failure() }}
         run: |
