--- a/config/default/kustomization.yaml
+++ b/config/default/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 # Adds namespace to all resources.
-namespace: multi-cluster-gateways
+namespace: multicluster-gateway-controller-system
 
 # Value of this field is prepended to the
 # names of all resources, e.g. a deployment named
