Adding bundle and catalog commands to make file

--- a/.github/workflows/controller-image.yaml
+++ b/.github/workflows/controller-image.yaml
@@ -5,19 +5,22 @@ on:
     branches:
       - main
       - "release-*"
+      - gh-276
     tags:
       - "v[0-9]+.[0-9]+.[0-9]+"
 
 env:
   IMG_REGISTRY_HOST: quay.io
-  IMG_REGISTRY_ORG: kuadrant
+  IMG_REGISTRY_ORG: rlawton
   IMG_REGISTRY_REPO: multicluster-gateway-controller
+  IMG_REGISTRY_REPO_BUNDLE: multicluster-gateway-controller-bundle
+  IMG_REGISTRY_REPO_CATALOG: multicluster-gateway-controller-catalog
   MAIN_BRANCH_NAME: main
 
 jobs:
-  build:
+  controller:
     if: github.repository_owner == 'kuadrant'
-    name: Build and Publish Controller Image
+    name: Build controller image
     runs-on: ubuntu-22.04
     outputs:
       sha_short: ${{ steps.vars.outputs.sha_short }}
@@ -61,28 +64,115 @@ jobs:
           echo "Image pushed to ${{ env.IMG_TAGS }}"
           echo "Image digest: ${{ steps.build-and-push.outputs.digest }}"
 
+  bundle: 
+    name: Build bundle image
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v3
+
+      # - uses: actions/setup-go@v4
+      #   with:
+      #     go-version: v1.20.x  
+
+      - name: Calculate vars
+        id: vars
+        run: |
+          echo "sha_short=$(echo ${{ github.sha }} | cut -b -7)" >> $GITHUB_OUTPUT
+          echo "base_image=${{ env.IMG_REGISTRY_HOST }}/${{ env.IMG_REGISTRY_ORG }}/${{ env.IMG_REGISTRY_REPO_CATALOG }}" >> $GITHUB_OUTPUT  
+      
+      - name: Add image tags
+        id: add-tags
+        run: echo "IMG_TAGS=${{ steps.vars.outputs.base_image }}:${{ steps.vars.outputs.sha_short }},${{ steps.vars.outputs.base_image }}:${{ github.ref_name }}" >> $GITHUB_ENV
+      
+      - name: Run make bundle
+        id: make-bundle
+        run: make bundle REGISTRY=${{ env.IMG_REGISTRY_HOST }} ORG=${{ env.IMG_REGISTRY_ORG }} IMAGE_TAG=${{ github.ref_name }}
+      
+      - name: Build bundle
+        id: build-bundle
+        run: make bundle-build REGISTRY=${{ env.IMG_REGISTRY_HOST }} ORG=${{ env.IMG_REGISTRY_ORG }} IMAGE_TAG=${{ github.ref_name }}
+      
+      - name: Login to Quay.io
+        uses: docker/login-action@v2
+        id: registry-login
+        with:
+          registry: ${{ env.IMG_REGISTRY_HOST }}
+          username: ${{ secrets.IMG_REGISTRY_USERNAME }}
+          password: ${{ secrets.IMG_REGISTRY_TOKEN }}  
+      
+      - name: Push bundle Image
+        run: make bundle-push REGISTRY=${{ env.IMG_REGISTRY_HOST }} ORG=${{ env.IMG_REGISTRY_ORG }} IMAGE_TAG=${{ github.ref_name }}
+      
+      - name: Print Image URL
+        run: echo "Image pushed to ${{ steps.push-to-quay.outputs.registry-paths }}"  
+
+  catalog: 
+    name: Build catalog image
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v3
+      
+      # - uses: actions/setup-go@v4
+      #   with:
+      #     go-version: v1.20.x  
+      
+      - name: Calculate vars
+        id: vars
+        run: |
+          echo "sha_short=$(echo ${{ github.sha }} | cut -b -7)" >> $GITHUB_OUTPUT
+          echo "base_image=${{ env.IMG_REGISTRY_HOST }}/${{ env.IMG_REGISTRY_ORG }}/${{ env.IMG_REGISTRY_REPO_BUNDLE }}" >> $GITHUB_OUTPUT  
+      
+      - name: Add image tags
+        id: add-tags
+        run: echo "IMG_TAGS=${{ steps.vars.outputs.base_image }}:${{ steps.vars.outputs.sha_short }},${{ steps.vars.outputs.base_image }}:${{ github.ref_name }}" >> $GITHUB_ENV
+      
+      - name: Run make catalog
+        id: make-catalog-build
+        run: make catalog-build REGISTRY=${{ env.IMG_REGISTRY_HOST }} ORG=${{ env.IMG_REGISTRY_ORG }} IMAGE_TAG=${{ github.ref_name }}
+      
+      - name: Login to Quay.io
+        uses: docker/login-action@v2
+        id: registry-login
+        with:
+          registry: ${{ env.IMG_REGISTRY_HOST }}
+          username: ${{ secrets.IMG_REGISTRY_USERNAME }}
+          password: ${{ secrets.IMG_REGISTRY_TOKEN }}
+      
+      - name: Make catalog push
+        id: make-catalog-push
+        run: make catalog-push REGISTRY=${{ env.IMG_REGISTRY_HOST }} ORG=${{ env.IMG_REGISTRY_ORG }} IMAGE_TAG=${{ github.ref_name }}
+      
+      - name: Print Image URL
+        run: echo "Image pushed to ${{ steps.push-to-quay.outputs.registry-paths }}" 
+
   update-hcg-unstable:
     if: "github.repository_owner == 'kuadrant' && github.ref_name == 'main'"
     name: Update HCG unstable
     runs-on: ubuntu-22.04
-    needs: build
+    needs: controller
     steps:
       - uses: actions/checkout@v3
         with:
           repository: Kuadrant/deployments
           ref: 'main'
           ssh-key: ${{ secrets.KUADRANT_DEPLOYMENTS_SSH_DEPLOY_KEY }}
+      
       - name: Install kustomize
         run: make kustomize
+      
       - name: Setup git config
         run: |
           git config user.name "GitHub Actions Bot"
           git config user.email "<kuadrant.dev@redhat.com>"
+      
       - name: Update controller image
         run: |
           export KUSTOMIZE=$(pwd)/bin/kustomize
           cd hcg/mctc/environments/unstable
           ${KUSTOMIZE} edit set image controller=${{ needs.build.outputs.controller_image }}
+      
       - name: Commit the change for ArgoCD to pick it up
         run: |
           git add hcg/mctc/environments/unstable/kustomization.yaml
