--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -5,5 +5,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
 - name: controller
-  newName: quay.io/rlawton/multicluster-gateway-controller
-  newTag: v4.4.4
+  newName: quay.io/kuadrant/multicluster-gateway-controller
+  newTag: main
