--- a/config/crd/bases/kuadrant.io_dnspolicies.yaml
+++ b/config/crd/bases/kuadrant.io_dnspolicies.yaml
@@ -62,6 +62,8 @@ spec:
                     type: array
                   failureThreshold:
                     type: integer
+                  interval:
+                    type: string
                   port:
                     type: integer
                   protocol:
