--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - main
+      - "release-*"
+    tags:
+      - "v[0-9]+.[0-9]+.[0-9]+"
     paths-ignore:
       - '**.adoc'
       - '**.md'
@@ -12,6 +15,7 @@ on:
   pull_request:
     branches:
       - main
+      - "release-*"
     paths-ignore:
       - '**.adoc'
       - '**.md'
