Add verify bundle
Adds a new verify bundle command that executes `make bundle` and ensures
the contents of `./bundle` are unchanged.

Add a check for createdAt being the only change to the bundle and ignore
it. Since operator-sdk 1.26.0, `make bundle` changes the `createdAt`
field from the bundle even if there are not other changes.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -65,6 +65,20 @@ jobs:
       - name: Run make verify-manifests
         run: |
           make verify-manifests
+  verify-bundle:
+    name: Verify bundle
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set up Go 1.20.x
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.20.x
+        id: go
+      - name: Check out code
+        uses: actions/checkout@v2
+      - name: Run make verify-bundle
+        run: |
+          make verify-bundle
   verify-imports:
     name: Verify imports
     runs-on: ubuntu-latest
