allow catalog source to be set in subscription

--- a/cmd/ocm/addon-manager/manifests/subscription.yaml
+++ b/cmd/ocm/addon-manager/manifests/subscription.yaml
@@ -7,7 +7,7 @@ spec:
   channel: alpha
   installPlanApproval: Automatic
   name: kuadrant-operator
-  source: operatorhubio-catalog
+  source: {{.CatalogSource}}
   sourceNamespace: olm
   config:
     env: 
