ignore kubectl yaml files

--- a/.gitignore
+++ b/.gitignore
@@ -86,7 +86,8 @@ config/deploy/**/_*
 /application.yaml
 /ratelimitpolicy.yaml
 /echo_httproute.yaml
-
+/control-plane.yaml
+/workload*.yaml
 cmd/controller/__debug_bin
 
 # Submariner broker config
