Add gateway.networking.k8s.io/policy annotation
Add the gateway.networking.k8s.io/policy annotation to policy CRDs

--- a/bundle/manifests/kuadrant.io_tlspolicies.yaml
+++ b/bundle/manifests/kuadrant.io_tlspolicies.yaml
@@ -3,6 +3,7 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.10.0
+    gateway.networking.k8s.io/policy: direct
   creationTimestamp: null
   name: tlspolicies.kuadrant.io
 spec:
