--- a/config/add-on-manager/manager.yaml
+++ b/config/add-on-manager/manager.yaml
@@ -31,6 +31,7 @@ spec:
         args:
         - --leader-elect
         image: addon-manager:latest
+        imagePullPolicy: Always
         envFrom:
           - configMapRef:
               name: controller-config
