allow source ns to be overridden

--- a/cmd/ocm/addon-manager/manifests/subscription.yaml
+++ b/cmd/ocm/addon-manager/manifests/subscription.yaml
@@ -8,7 +8,7 @@ spec:
   installPlanApproval: Automatic
   name: kuadrant-operator
   source: {{.CatalogSource}}
-  sourceNamespace: olm
+  sourceNamespace: {{.CatalogSourceNS}}
   config:
     env: 
       - name: ISTIOOPERATOR_NAME
