--- a/config/crd/patches/policy-patch.yaml
+++ b/config/crd/patches/policy-patch.yaml
@@ -2,12 +2,12 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   name: dnspolicies.kuadrant.io
-  annotations:
+  labels:
     gateway.networking.k8s.io/policy: direct
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   name: tlspolicies.kuadrant.io
-  annotations:
+  labels:
     gateway.networking.k8s.io/policy: direct
