allow channel to be overridden

--- a/cmd/ocm/addon-manager/manifests/subscription.yaml
+++ b/cmd/ocm/addon-manager/manifests/subscription.yaml
@@ -4,7 +4,7 @@ metadata:
   name: kuadrant-operator
   namespace: kuadrant-system
 spec:
-  channel: alpha
+  channel: {{.Channel}}
   installPlanApproval: Automatic
   name: kuadrant-operator
   source: {{.CatalogSource}}
