--- a/config/coredns/etcd/kustomization.yaml
+++ b/config/coredns/etcd/kustomization.yaml
@@ -1,11 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-helmGlobals:
-  chartHome: ../../charts
 helmCharts:
   - name: etcd
     repo: https://charts.bitnami.com/bitnami
-    releaseName: mctc
+    releaseName: mgc
     valuesInline:
       auth:
         rbac:
@@ -14,4 +12,4 @@ helmCharts:
       service:
         type: ClusterIP
         enabled: true
-        clusterIP: "10.96.125.73"
+        clusterIP: "100.9.125.73"
