--- a/config/external-dns/kustomization.yaml
+++ b/config/external-dns/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: external-dns
 resources:
-  - namespace.yaml
+  - ../coredns/namespace.yaml
 helmCharts:
   - name: external-dns
     repo: https://charts.bitnami.com/bitnami
