--- a/config/policy-controller/crd/bases/kuadrant.io_dnspolicies.yaml
+++ b/config/policy-controller/crd/bases/kuadrant.io_dnspolicies.yaml
@@ -155,6 +155,12 @@ spec:
                         type: integer
                     type: object
                 type: object
+              routingStrategy:
+                default: loadbalanced
+                enum:
+                - simple
+                - loadbalanced
+                type: string
               targetRef:
                 description: PolicyTargetReference identifies an API object to apply
                   policy to. This should be used as part of Policy resources that
@@ -193,6 +199,7 @@ spec:
                 - name
                 type: object
             required:
+            - routingStrategy
             - targetRef
             type: object
           status:
