Add DNSPolicy Strategy
Adds a strategy field to the DNSPolicy spec that determines how the
policy with generate endpoints for any created DNSRecords.

Two strategies are allowed, `simple` and `loadbalanced`. Simple will
creates a single DNS record (A or CNAME) for each listener/hostname with
all ip/hostnames as targets. LoadBalanced works as before by creating a
more complex record structure with CNAMES and A records using Geo and
Weighted routing strategies to achieve loadbalancing functionality.

The strategy field is currently marked as immutable and it should not be
chnaged after initial DNSPolicy creation.

--- a/config/crd/bases/kuadrant.io_dnspolicies.yaml
+++ b/config/crd/bases/kuadrant.io_dnspolicies.yaml
@@ -155,6 +155,14 @@ spec:
                         type: integer
                     type: object
                 type: object
+              strategy:
+                enum:
+                - simple
+                - loadbalanced
+                type: string
+                x-kubernetes-validations:
+                - message: DNSPolicyStrategy is immutable
+                  rule: self == oldSelf
               targetRef:
                 description: PolicyTargetReference identifies an API object to apply
                   policy to. This should be used as part of Policy resources that
@@ -193,6 +201,7 @@ spec:
                 - name
                 type: object
             required:
+            - strategy
             - targetRef
             type: object
           status:
