fix coredns etcd reference for config map

--- a/config/coredns/kustomization.yaml
+++ b/config/coredns/kustomization.yaml
@@ -43,7 +43,7 @@ helmCharts:
             - name: reload
             - name: loadbalance
             - name: etcd
-              parameters: local.dev.hcpapps.net
+              parameters: coredns.hcpapps.local
               configBlock: |-
                 stubzones
                 path /skydns
