--- a/bundle/manifests/kuadrant.io_dnspolicies.yaml
+++ b/bundle/manifests/kuadrant.io_dnspolicies.yaml
@@ -156,6 +156,14 @@ spec:
                         type: integer
                     type: object
                 type: object
+              strategy:
+                enum:
+                - simple
+                - loadbalanced
+                type: string
+                x-kubernetes-validations:
+                - message: DNSPolicyStrategy is immutable
+                  rule: self == oldSelf
               targetRef:
                 description: PolicyTargetReference identifies an API object to apply
                   policy to. This should be used as part of Policy resources that
@@ -194,6 +202,7 @@ spec:
                 - name
                 type: object
             required:
+            - strategy
             - targetRef
             type: object
           status:
