feat: DNSProvider secret ref in DNSPolicy
Removes the requirement for a ManagedZone to be configured for a host in
order for the DNSPolicy to create dns records for it.

Make DNSRecord.zoneID optional Set specific allowed values for
providerRef.Kind
Allow a providerRef.Kind of ManagedZone that looks up zones from
Managedzones in the current ns (Current behaviour) and loads dns client
through the managed zone providerRef.  Add logic around zoneAssignment
in dnsPolicy, some providerRef.kinds will result in zoneAssignment being
false which indicates that a zone is not going to be looked up or
assigned to any created DNSRecords. A DNSRecord will be created for all
listeners in this case.

Created a v1alpha2 API for DNSPolicy, ManagedZone and DNSRecord.
v1alpha1 versions are removed and no longer supported.

E2E Test Updates

* DO NOT MERGE Add 406_dnspolicy_provider_ref branch for testing
* Add e2e test for dnspolicy focused on istio gateways and providers
* Add suite id and generate a testDomainName to use for all tests in
  that instance of the suite (Avoids thigns like wildcard hosts being
created that coudl affect all instances of a suite running in teh same
hosted zone)
* Removed all references to managed zones as input to the e2e test
  suite. Env vars required now are TEST_DNS_ZONE_DOMAIN_NAME,
TEST_DNS_ZONE_ID and TEST_DNS_PROVIDER_SECRET_NAME.

ManagedZone updates

* Make description optional
* fix managedZoneListToZoneList - use range index
* Make ID and description pointers
* Remove hostedzone prefix from AWS hosted zones
* Use status id in managedZoneListToZoneList

--- a/bundle/manifests/multicluster-gateway-controller.clusterserviceversion.yaml
+++ b/bundle/manifests/multicluster-gateway-controller.clusterserviceversion.yaml
@@ -4,7 +4,7 @@ metadata:
   annotations:
     alm-examples: '[]'
     capabilities: Basic Install
-    createdAt: "2023-12-21T13:08:31Z"
+    createdAt: "2023-12-04T11:02:57Z"
     operators.operatorframework.io/builder: operator-sdk-v1.28.0
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v3
   name: multicluster-gateway-controller.v0.0.0
@@ -18,15 +18,13 @@ spec:
       version: v1alpha1
     - kind: DNSPolicy
       name: dnspolicies.kuadrant.io
-      version: v1alpha1
+      version: v1alpha2
     - kind: DNSRecord
       name: dnsrecords.kuadrant.io
-      version: v1alpha1
-    - description: ManagedZone is the Schema for the managedzones API
-      displayName: Managed Zone
-      kind: ManagedZone
+      version: v1alpha2
+    - kind: ManagedZone
       name: managedzones.kuadrant.io
-      version: v1alpha1
+      version: v1alpha2
     - kind: TLSPolicy
       name: tlspolicies.kuadrant.io
       version: v1alpha1
