--- a/config/local-setup/controller/gcp/managed_zone.yaml
+++ b/config/local-setup/controller/gcp/managed_zone.yaml
@@ -1,4 +1,4 @@
-apiVersion: kuadrant.io/v1alpha1
+apiVersion: kuadrant.io/v1alpha2
 kind: ManagedZone
 metadata:
   name: dev-mz-gcp
@@ -6,5 +6,5 @@ spec:
   id: DUMMY_ID
   domainName: DUMMY_DOMAIN_NAME
   description: "Dev Managed Zone"
-  dnsProviderSecretRef:
+  providerRef:
     name: mgc-gcp-credentials
