--- a/config/policy-controller/crd/bases/kuadrant.io_managedzones.yaml
+++ b/config/policy-controller/crd/bases/kuadrant.io_managedzones.yaml
@@ -36,7 +36,7 @@ spec:
       jsonPath: .status.conditions[?(@.type=="Ready")].status
       name: Ready
       type: string
-    name: v1alpha1
+    name: v1alpha2
     schema:
       openAPIV3Schema:
         description: ManagedZone is the Schema for the managedzones API
@@ -59,13 +59,6 @@ spec:
               description:
                 description: Description for this ManagedZone
                 type: string
-              dnsProviderSecretRef:
-                properties:
-                  name:
-                    type: string
-                required:
-                - name
-                type: object
               domainName:
                 description: Domain name of this ManagedZone
                 pattern: ^(([a-zA-Z0-9]|[a-zA-Z0-9][a-zA-Z0-9\-]*[a-zA-Z0-9])\.)*([A-Za-z0-9]|[A-Za-z0-9][A-Za-z0-9\-]*[A-Za-z0-9])$
@@ -83,10 +76,23 @@ spec:
                 required:
                 - name
                 type: object
+              providerRef:
+                properties:
+                  kind:
+                    enum:
+                    - None
+                    - Secret
+                    - ManagedZone
+                    type: string
+                  name:
+                    type: string
+                required:
+                - kind
+                - name
+                type: object
             required:
-            - description
-            - dnsProviderSecretRef
             - domainName
+            - providerRef
             type: object
           status:
             description: ManagedZoneStatus defines the observed state of a Zone
