--- a/config/gateway-api/kustomization.yaml
+++ b/config/gateway-api/kustomization.yaml
@@ -2,4 +2,5 @@ resources:
 - crd/standard/gateway.networking.k8s.io_gatewayclasses.yaml
 - crd/standard/gateway.networking.k8s.io_gateways.yaml
 - crd/standard/gateway.networking.k8s.io_httproutes.yaml
-# From https://github.com/kubernetes-sigs/gateway-api/blob/v0.6.2/config/crd/kustomization.yaml
+- crd/standard/gateway.networking.k8s.io_referencegrants.yaml
+# From https://github.com/kubernetes-sigs/gateway-api/blob/v1.0.0/config/crd/kustomization.yaml
