--- a/config/samples/echo_httproute.yaml
+++ b/config/samples/echo_httproute.yaml
@@ -33,7 +33,7 @@ spec:
               containerPort: 8080
               protocol: TCP
 ---
-apiVersion: gateway.networking.k8s.io/v1beta1
+apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
   name: echo
