wip allow policy controller to be deployed independantly
give policy controller gateway perms

give policy controller secret perms

move crds

update bundle

change local-setup mgc to use new crd location

move install and uninstall to policy.make

update bundle and remove ns from add-on manager

remove xargs command

add monitors and services for policy controller

remove all extra labels

update rbac

remove branch from triggers

--- a/bundle/manifests/mgc-kuadrant-dnsrecord-viewer-role_rbac.authorization.k8s.io_v1_clusterrole.yaml
+++ b/bundle/manifests/mgc-kuadrant-dnsrecord-viewer-role_rbac.authorization.k8s.io_v1_clusterrole.yaml
@@ -1,20 +1,20 @@
-# permissions for end users to view managedzones.
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
+  creationTimestamp: null
   labels:
-    app.kubernetes.io/name: clusterrole
-    app.kubernetes.io/instance: managedzone-viewer-role
     app.kubernetes.io/component: rbac
     app.kubernetes.io/created-by: multicluster-gateway-controller
-    app.kubernetes.io/part-of: multicluster-gateway-controller
+    app.kubernetes.io/instance: dnsrecord-viewer-role
     app.kubernetes.io/managed-by: kustomize
-  name: managedzone-viewer-role
+    app.kubernetes.io/name: clusterrole
+    app.kubernetes.io/part-of: multicluster-gateway-controller
+  name: mgc-kuadrant-dnsrecord-viewer-role
 rules:
 - apiGroups:
   - kuadrant.io
   resources:
-  - managedzones
+  - dnsrecords
   verbs:
   - get
   - list
@@ -22,6 +22,6 @@ rules:
 - apiGroups:
   - kuadrant.io
   resources:
-  - managedzones/status
+  - dnsrecords/status
   verbs:
   - get
