--- a/bundle/manifests/mgc-kuadrant-dnsrecord-editor-role_rbac.authorization.k8s.io_v1_clusterrole.yaml
+++ b/bundle/manifests/mgc-kuadrant-dnsrecord-editor-role_rbac.authorization.k8s.io_v1_clusterrole.yaml
@@ -1,20 +1,20 @@
-# permissions for end users to edit managedzones.
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
+  creationTimestamp: null
   labels:
-    app.kubernetes.io/name: clusterrole
-    app.kubernetes.io/instance: managedzone-editor-role
     app.kubernetes.io/component: rbac
     app.kubernetes.io/created-by: multicluster-gateway-controller
-    app.kubernetes.io/part-of: multicluster-gateway-controller
+    app.kubernetes.io/instance: dnsrecord-editor-role
     app.kubernetes.io/managed-by: kustomize
-  name: managedzone-editor-role
+    app.kubernetes.io/name: clusterrole
+    app.kubernetes.io/part-of: multicluster-gateway-controller
+  name: mgc-kuadrant-dnsrecord-editor-role
 rules:
 - apiGroups:
   - kuadrant.io
   resources:
-  - managedzones
+  - dnsrecords
   verbs:
   - create
   - delete
@@ -26,6 +26,6 @@ rules:
 - apiGroups:
   - kuadrant.io
   resources:
-  - managedzones/status
+  - dnsrecords/status
   verbs:
   - get
