--- a/config/default/kustomization.yaml
+++ b/config/default/kustomization.yaml
@@ -1,6 +1,4 @@
-apiVersion: kustomize.config.k8s.io/v1beta1
-kind: Kustomization
-# Adds namespace to all resources.
+
 namespace: multicluster-gateway-controller-system
 
 # Value of this field is prepended to the
@@ -10,30 +8,14 @@ namespace: multicluster-gateway-controller-system
 # field above.
 namePrefix: mgc-
 
-# Labels to add to all resources and selectors.
-#commonLabels:
-#  someName: someValue
-
-# [CERTMANAGER] To enable cert-manager, uncomment all sections with 'CERTMANAGER'.
-#- ../certmanager
-# [PROMETHEUS] To enable prometheus monitor, uncomment all sections with 'PROMETHEUS'.
-#- ../prometheus
-
-# Protect the /metrics endpoint by putting it behind auth.
-# If you want your controller-manager to expose the /metrics
-# endpoint w/o any authn/z, please comment the following line.
-
-# [CERTMANAGER] To enable cert-manager, uncomment all sections with 'CERTMANAGER'.
-# Uncomment 'CERTMANAGER' sections in crd/kustomization.yaml to enable the CA injection in the admission webhooks.
-# 'CERTMANAGER' needs to be enabled to use ca injection
-#- webhookcainjection_patch.yaml
-
 resources:
-- ../crd
 - ../rbac
-- namespace.yaml
 - ../manager
 - ../add-on-manager
-- ../policy-controller
+- ../policy-controller/default
+
 patches:
 - path: manager_metrics_patch.yaml
+
+patchesStrategicMerge:
+  - delete-kuadrant-system-ns-object.yaml
