--- a/config/policy-controller/manager/manager.yaml
+++ b/config/policy-controller/manager/manager.yaml
@@ -1,16 +1,17 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  labels:
+    control-plane: policy-controller
+  name: system
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: policy-controller-manager
+  name: policy-controller
   namespace: system
   labels:
-    control-plane: controller-manager
-    app.kubernetes.io/name: deployment
-    app.kubernetes.io/instance: policy-controller
-    app.kubernetes.io/component: manager
-    app.kubernetes.io/created-by: policy-controller
-    app.kubernetes.io/part-of: kuadrant
-    app.kubernetes.io/managed-by: kustomize
+    control-plane: policy-controller
 spec:
   selector:
     matchLabels:
@@ -59,5 +60,5 @@ spec:
           requests:
             cpu: 10m
             memory: 64Mi
-      serviceAccountName: controller-manager
+      serviceAccountName: policy-controller
       terminationGracePeriodSeconds: 10
