--- a/config/prometheus/kustomization.yaml
+++ b/config/prometheus/kustomization.yaml
@@ -1,5 +1,7 @@
 resources:
-- monitor.yaml
-- service.yaml
+- gateway-controller-monitor.yaml
+- gateway-controller-service.yaml
+- policy-controller-monitor.yaml
+- policy-controller-service.yaml
 
 namespace: multicluster-gateway-controller-system
