--- a/config/prometheus/policy-controller-service.yaml
+++ b/config/prometheus/policy-controller-service.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   labels:
     control-plane: policy-controller
-  name: metrics
+  name: policy-controller-metrics
   namespace: system
 spec:
   selector:
